test/int_expansion_error.cppo
#define FOO 3+3
#if FOO = 0
  let x = "Hello"
#endif
